# seaorm_test

./: .env  .gitignore  Cargo.toml  README.md  db.sqlite  gen_entity.cmd
entity/: Cargo.toml
entity/src/: test_data.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
src/: main.rs
