[workspace]
members = [ "entity", "migration"]

[workspace.dependencies]
entity = { path = "./entity" }

[workspace.dependencies.sea-orm]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono",
  "macros",
]
default-features = false

[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }

chrono = "0.4.38"
chrono-tz = "0.9.0"

entity.workspace = true
sea-orm.workspace = true
