[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sea-orm]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono",
  "macros",
]
default-features = false
